import flowWorkspace::logicle_trans #10

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(flowWorkspace,getTotal)
 importFrom(flowWorkspace,getTransformations)
 importFrom(flowWorkspace,keyword)
 importFrom(flowWorkspace,logicleGml2_trans)
+importFrom(flowWorkspace,logicle_trans)
 importFrom(flowWorkspace,pData)
 importFrom(flowWorkspace,parseWorkspace)
 importFrom(flowWorkspace,recompute)
