--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,4 +43,5 @@ Collate:
     'flowUtils_functions.R'
     'read.gatingML.cytobank.R'
     'graphGML_methods.R'
+    'parseDivaWorkspace_old.R'
     'utils.R'
