#99: Implement subset by filtering expression in flowjo_to_gatingset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(base64enc,base64encode)
 importFrom(cytolib,cytolib_LdFlags)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,count)
+importFrom(dplyr,enquo)
 importFrom(dplyr,filter)
 importFrom(dplyr,rename)
 importFrom(flowCore,"colnames<-")
