prepend extra meta info to wsp file generated by gs-to-flowjo

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     corpcor,
     RUnit,
     tibble,
-    RcppParallel
+    RcppParallel,
+    xml2
 biocViews: ImmunoOncology, FlowCytometry, DataImport, DataRepresentation
 LinkingTo: Rcpp, BH(>= 1.62.0-1), RProtoBufLib, cytolib ( >= 1.99.26),Rhdf5lib, RcppArmadillo, RcppParallel(>= 4.4.2-1), flowWorkspace
 Suggests:
