--- a/NAMESPACE
+++ b/NAMESPACE
@@ -199,5 +199,10 @@ importFrom(tibble,tibble)
 importFrom(utils,localeToCharset)
 importFrom(utils,menu)
 importFrom(utils,packageVersion)
+importFrom(xml2,read_xml)
+importFrom(xml2,write_xml)
+importFrom(xml2,xml_add_child)
+importFrom(xml2,xml_add_sibling)
+importFrom(xml2,xml_comment)
 importFrom(yaml,read_yaml)
 useDynLib(CytoML,.registration = TRUE)
