importFrom flowWorkspace cytoset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ importFrom(flowWorkspace,cs_load_meta)
 importFrom(flowWorkspace,cs_lock)
 importFrom(flowWorkspace,cs_swap_colnames)
 importFrom(flowWorkspace,cs_unlock)
+importFrom(flowWorkspace,cytoset)
 importFrom(flowWorkspace,fix_channel_slash)
 importFrom(flowWorkspace,flow_trans)
 importFrom(flowWorkspace,getChildren)
